<resources>
    <string name="app_name">InternshipProgram</string>
    <string name="account">Account</string>
    <string name="browse">Browse</string>
    <string name="home">Home</string>
    <string name="myrofile">My Profile</string>
    <string name="digilockerdrive">DigiLocker Drive</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="report_issue">Report Issue</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="more">More</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
</resources>