<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="15dp"
    android:paddingLeft="15dp"
    android:paddingBottom="5dp"
    android:paddingRight="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/notification_bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logo"
        app:srcCompat="@drawable/notification"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/accountTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/accountTab"
        app:layout_constraintTop_toBottomOf="@+id/accountTab">

        <ImageView
            android:id="@+id/myprofile_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_profile"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/myprofile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/myrofile"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/dldrive_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/cloud_upload"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/dldrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/digilockerdrive"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/support"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="22dp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3">.

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/help"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/help"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/report_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/report"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/report_issue"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:id="@+id/contact_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/contact"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/contact_us"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:id="@+id/about_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/aboutus"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/about_us"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/more"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/linearLayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="22dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">.

        <ImageView
            android:id="@+id/share_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/share"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/share_app"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageView
            android:id="@+id/rate_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/rate"
            android:backgroundTint="@color/tint_black_icon" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/rate_app"
            android:textColor="@color/tint_black"
            android:textSize="16dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout8"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
        <ImageView
            android:id="@+id/logout_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/logout"
            android:backgroundTint="@color/pink" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:text="@string/logout"
            android:textColor="@color/pink"
            android:textSize="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>